2013-03-25  Chong Yidong  <cyd@gnu.org>

	* iswitchb.el (iswitchb-read-buffer): Fix typo.

2013-03-16  Leo Liu  <sdl.web@gmail.com>

	* progmodes/scheme.el: Add indentation and font-locking for λ.
	(Bug#13975)

2013-03-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-auto-fill): Don't inf-loop if there's no
	token before point (bug#13942).

2013-03-14  Leo Liu  <sdl.web@gmail.com>

	* thingatpt.el (end-of-sexp): Fix bug#13952.  Use syntax-after.

2013-03-11  Glenn Morris  <rgm@gnu.org>

	* Version 24.3 released.

2013-02-25  Glenn Morris  <rgm@gnu.org>

	* textmodes/paragraphs.el (mark-paragraph): Doc fix.

2013-02-21  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-lazy-highlight-new-loop):
	Set `isearch-lazy-highlight-start' and `isearch-lazy-highlight-end'
	to `isearch-other-end' if it is not nil.  (Bug#13402)

	* replace.el (replace-highlight): Let-bind `isearch-other-end'
	to `match-beg'.

	* textmodes/ispell.el (ispell-highlight-spelling-error-overlay):
	Let-bind `isearch-other-end' to `start', `isearch-forward' to t
	and `isearch-error' to nil.

2013-02-20  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-info-current-defun):
	Enhance match-data cluttering prevention.

2013-02-19  Glenn Morris  <rgm@gnu.org>

	* net/tramp.el (tramp-get-debug-buffer): Ensure outline.el is not
	loaded while outline-regexp is let bound.  (Bug#9584)

2013-02-19  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-info-current-defun): Fix failed
	defun name retrieval because of unwanted match-data cluttering.

2013-02-19  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-indent-context):
	Fix python-info-line-ends-backslash-p call.
	(python-info-line-ends-backslash-p)
	(python-info-beginning-of-backslash): Respect line-number
	argument.
	(python-info-current-line-comment-p): Fix behavior when not at
	beginning-of-line.
	(python-util-position): Remove function.